@@ -369,8 +369,10 @@ pybsddb_doc/>`__ --
                     'Programming Language :: Python :: 2.4',
                     'Programming Language :: Python :: 2.5',
                     'Programming Language :: Python :: 2.6',
+                    'Programming Language :: Python :: 2.7',
                     'Programming Language :: Python :: 3',
                     'Programming Language :: Python :: 3.0',
                     'Programming Language :: Python :: 3.1',
+                    'Programming Language :: Python :: 3.2',
                     ],
       )
